--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,5 +10,18 @@
 {% endblock %}
 
 {% block content %}
-<h1>It works!</h1>
+<div class="container h-100">
+    <div class="row h-100">
+        <div class="col-7 col-md-6 my-auto">
+            <h1 class="display-4 logo-font text-white">
+                It's story time!
+            </h1>
+            <div class="my-5">
+                <h4>
+                    <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now<i class="fa-regular fa-book-open-reader" style="color: #6c780e;"></i></a>
+                </h4>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
