--- a/templates/base.html
+++ b/templates/base.html
@@ -40,12 +40,81 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
+        <div class="row">
+            <!-- Logo -->
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+                <a href="{% url 'home' %}" class="nav-link main-logo-link" 
+                    aria-current="page" aria-label="Go to home page">
+                    <h2 class="logo-font hover my-0">Bedside Tales</h2>
+                </a>
+            </div>
+            <!-- Search bar -->
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center">
+                <form method="GET" action="{% url 'products' %}" aria-label="search bar">
+                    <div class="input-group w-100">
+                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                        <div class="input-group-append">
+                            <button class="form-control btn btn-dark border border-black rounded-0 hover" type="submit" aria-label="submit-search">
+                                <span class="icon">
+                                    <i class="fas fa-search"></i>
+                                </span>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <!-- Account & Shopping bag links -->
+            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center">
+                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+                    <li class="list-inline-item dropdown">
+                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-label="my account dropdown list">
+                            <div class="text-center">
+                                <div><i class="fas fa-user fa-lg"></i></div>
+                                <p class="my-0">My Account</p>
+                            </div>
+                        </a>
+                        <!-- Dropdown My Account menu for logged in users -->
+                        <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                            {% if request.user.is_authenticated %}
+                                {% if request.user.is_superuser %}
+                                <!-- CRUD functionality for superuser to manage the products -->
+                                    <a href="" class="dropdown-item">Book Management</a>
+                                {% endif %}
+                                <a href="" class="dropdown-item">My Profile</a>
+                                <!-- Custom Wish list and account links from Django allauth -->
+                                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                                <a href="" class="dropdown-item">Wish List<i class="fa-solid fa-book-bookmark" style="color: #6c780e;"></i></a>
+                            {% else %}
+                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            {% endif %}
+                        </div>
+                    </li>
+                    <!-- Shopping bag -->
+                    <li class="list-inline-item">
+                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+                            <div class="text-center">
+                                <div><i class="fas fa-shopping-bag fa-lg" style="color: #6c780e;"></i></div>
+                                <p class="my-0">
+                                    {% if grand_total %}
+                                        ${{ grand_total|floatformat:2 }}
+                                    {% else %}
+                                        $0.00
+                                    {% endif %}
+                                </p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            </div>
+        </div>
 
     </header>
 
     {% if messages %}
         <div class="message-container">
-
+            
         </div>
     {% endif %}
 
