Completed home page header and css

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,12 +13,12 @@
 <div class="container h-100">
     <div class="row h-100">
         <div class="col-7 col-md-6 my-auto">
-            <h1 class="display-4 logo-font text-white">
-                It's story time!
+            <h1 id="text-cover" class="display-4 text-color">
+                <strong>Tales to inspire the imagination</strong>
             </h1>
             <div class="my-5">
                 <h4>
-                    <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now<i class="fa-regular fa-book-open-reader" style="color: #6c780e;"></i></a>
+                    <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now <i class="fa-solid fa-book-open"></i></a>
                 </h4>
             </div>
         </div>
