--- a/templates/base.html
+++ b/templates/base.html
@@ -16,15 +16,24 @@
     {% block extra_meta %}
     {% endblock %}
 
-    <!-- BootFstrap CSS -->
+    <!-- Favicon -->
+    {% block favicon %}
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
+    {% endblock %}
+
+    <!-- Bootstrap CSS -->
     {% block corecss %}
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@500&display=swap">
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
 
     {% block extra_css %}
     {% endblock %}
 
-    <!-- jQuery, Separate Popper, Bootstrap JS & Font -->
+    <!-- jQuery, Separate Popper, Bootstrap JS & Font Awesome-->
     {% block corejs %}
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -40,17 +49,17 @@
   </head>
   <body>
     <header class="container-fluid fixed-top">
-        <div class="row">
+        <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <!-- Logo -->
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link" 
                     aria-current="page" aria-label="Go to home page">
-                    <h2 class="logo-font hover my-0">Bedside Tales</h2>
+                    <h2 class="logo-font hover my-0" id="title">Bedside Tales</h2>
                 </a>
             </div>
             <!-- Search bar -->
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center">
-                <form method="GET" action="{% url 'products' %}" aria-label="search bar">
+                <form method="GET" action="" aria-label="search bar">
                     <div class="input-group w-100">
                         <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                         <div class="input-group-append">
@@ -83,7 +92,7 @@
                                 <a href="" class="dropdown-item">My Profile</a>
                                 <!-- Custom Wish list and account links from Django allauth -->
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                                <a href="" class="dropdown-item">Wish List<i class="fa-solid fa-book-bookmark" style="color: #6c780e;"></i></a>
+                                <a href="" class="dropdown-item">Wish List <i class="fa-solid fa-book-bookmark"></i></a>
                             {% else %}
                                 <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
                                 <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
@@ -94,12 +103,12 @@
                     <li class="list-inline-item">
                         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
                             <div class="text-center">
-                                <div><i class="fas fa-shopping-bag fa-lg" style="color: #6c780e;"></i></div>
+                                <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                                 <p class="my-0">
                                     {% if grand_total %}
-                                        ${{ grand_total|floatformat:2 }}
+                                        £{{ grand_total|floatformat:2 }}
                                     {% else %}
-                                        $0.00
+                                        £0.00
                                     {% endif %}
                                 </p>
                             </div>
