--- a/templates/base.html
+++ b/templates/base.html
@@ -63,7 +63,7 @@
                     <div class="input-group w-100">
                         <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                         <div class="input-group-append">
-                            <button class="form-control btn btn-dark border border-black rounded-0 hover" type="submit" aria-label="submit-search">
+                            <button class="form-control btn btn-color border border-black rounded-0 hover" type="submit" aria-label="submit-search">
                                 <span class="icon">
                                     <i class="fas fa-search"></i>
                                 </span>
@@ -72,7 +72,7 @@
                     </div>
                 </form>
             </div>
-            <!-- Account & Shopping bag links -->
+            <!-- My Account & Shopping bag links -->
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                     <li class="list-inline-item dropdown">
@@ -116,9 +116,22 @@
                     </li>
                 </ul>
             </div>
+        </div>
+        <div class="row bg-white">
+            <!--- Bootstrap navbar --->
+            <nav class="navbar navbar-expand-lg navbar-light w-100">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                {% include 'includes/mobile_top_header.html' %}
+                {% include 'includes/main_nav.html' %}
+            </nav>
+        </div>
+        <div id="delivery-banner" class="row text-center">
+            <div class="col bg-color text-white">
+                <h4 class="logo-font my-1">Free delivery on orders over £{{ free_shipping_threshold }}!</h4>                
             </div>
         </div>
-
     </header>
 
     {% if messages %}
