Added products app, models and admin

--- a/templates/includes/main_nav.html
+++ b/templates/includes/main_nav.html
@@ -9,6 +9,7 @@
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="" class="dropdown-item">Adventure</a>
                 <a href="" class="dropdown-item ">Fantasy</a>
+                <a href="" class="dropdown-item ">Fiction</a>
                 <a href="" class="dropdown-item ">Picture books</a>
                 <a href="" class="dropdown-item">All books</a>
             </div>
