Added product details functionality

--- a/templates/includes/main_nav.html
+++ b/templates/includes/main_nav.html
@@ -11,7 +11,7 @@
                 <a href="" class="dropdown-item ">Fantasy</a>
                 <a href="" class="dropdown-item ">Fiction</a>
                 <a href="" class="dropdown-item ">Picture books</a>
-                <a href="" class="dropdown-item">All books</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All books</a>
             </div>
         </li>
 
