--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -17,7 +17,7 @@
             <div class="col text-center mt-3">
                 <h2 class="logo-font">Books</h2>
                 <hr class="w-50 mb-1">
-                <!-- Displays category badge based on user's catergory selection -->
+                <!-- Displays category badge based on user's category selection -->
                 {% for c in current_categories %}
                     <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
                         <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">
@@ -27,6 +27,23 @@
                 {% endfor %}
             </div>
         </div>
+        <!-- Category -->
+        <div class="row">
+            <div class="product-container col-10 offset-1">
+                <div class="row mt-1 mb-2">
+                    <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+                    </div>
+                    <div class="col-12 col-md-6 order-md-first">
+                        <p class="text-muted mt-3 text-center text-md-left">
+                            {% if search_term or current_categories or current_sorting != 'None_None' %}
+                                <span class="small"><a href="">Products Page</a> | </span>
+                            {% endif %}
+                            {{ books|length }} Books{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div> 
         <!-- Bootstrap card for each book product -->
         <div class="row">
             <div class="product-container col-10 offset-1">
@@ -36,11 +53,11 @@
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 border-0">
                                 {% if product.image %}
-                                    <a href="">
+                                    <a href="{% url 'product_detail' product.id %}">
                                         <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                                     </a>
                                 {% else %}
-                                    <a href="">
+                                    <a href="{% url 'product_detail' product.id %}">
                                         <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                     </a>
                                 {% endif %}
