--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
             </div>
             <!-- Search bar -->
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center">
-                <form method="GET" action="" aria-label="search bar">
+                <form method="GET" action="{% url 'products' %}" aria-label="search bar">
                     <div class="input-group w-100">
                         <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                         <div class="input-group-append">
