Added category filtering

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -38,7 +38,7 @@
                             {% if search_term or current_categories or current_sorting != 'None_None' %}
                                 <span class="small"><a href="">Products Page</a> | </span>
                             {% endif %}
-                            {{ books|length }} Books{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
+                            {{ product|length }} Books{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
                         </p>
                     </div>
                 </div>
