--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -46,7 +46,7 @@
                         {% endif %}
                     <p class="mt-3">{{ product.description }}</p>
                     <!-- Form to add the product to the shopping bag -->
-                    <form class="form" action="" method="POST">
+                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="col-12">
