--- a/bag/templates/bag/item_quantity.html
+++ b/bag/templates/bag/item_quantity.html
@@ -24,9 +24,9 @@
         </div>
     </div>
 </form>
-<button type="button" class="update-link text-color font-weight-bold" aria-label="update item quantity button">
+<button type="button" class="text-info" aria-label="update item quantity button">
     <small>Update</small>
 </button>
-<button type="button" class="remove-item text-danger float-right remove_{{ item.item_id }}" data-product_size="{{ item.size }}" aria-label="remove item button">
+<button type="button" class="text-danger float-right remove_{{ item.item_id }}" data-product_size="{{ item.size }}" aria-label="remove item button">
     <small>Remove</small>
 </button>
