--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -3,132 +3,134 @@
 {% load crispy_forms_tags %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-                <div class="image-container my-5">
-                    {% if product.image %}
-                        <a href="{{ product.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                        </a>
-                        {% else %}
-                        <a href="">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                        </a>
-                    {% endif %}
-                </div>
+<div class="overlay"></div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+            <div class="image-container my-5">
+                {% if product.image %}
+                <a href="{{ product.image.url }}" target="_blank">
+                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                </a>
+                {% else %}
+                <a href="">
+                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                </a>
+                {% endif %}
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="product-details-container mb-5 mt-md-5">
-                    <p class="mb-0">{{ product.title }}</p>
-                    <p class="mb-0">{{ product.author }}</p>
-                    <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
-                    {% if product.category %}
-                    <p class="small mt-1 mb-0">
-                        <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                            <i class="fas fa-tag mr-1"></i>{{ product.category.name }}
-                        </a>
-                    </p>
-                    {% endif %}
-                    {% if product.goodreads_url %}
-                        <p>Futher info:
-                            <a href="{{ product.goodreads_url }}" target="_blank"><i class="fa-brands fa-goodreads-g"></i></a>
-                        </p>
-                        {% else %}
-                        {% endif %}
-                    <p class="mt-3">{{ product.description }}</p>
-                    <!-- Form to add the product to the shopping bag -->
-                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
-                        {% csrf_token %}
-                        <div class="form-row">
-                            <div class="col-12">
-                                <p class="mt-3"><strong>Quantity:</strong></p>
-                                <div class="form-group w-50">
-                                    <div class="input-group">
-                                        <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-color rounded-0" 
-                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-minus"></i>
-                                                </span>
-                                            </button>
-                                        </div>
-                                        <input class="form-control qty_input" type="number"
-                                            name="quantity" value="1" min="1" max="99"
-                                            data-item_id="{{ product.id }}"
-                                            id="id_qty_{{ product.id }}">
-                                        <div class="input-group-append">
-                                            <button class="increment-qty btn btn-color rounded-0"
-                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                                <span class="icon">
-                                                    <i class="fas fa-plus"></i>
-                                                </span>
-                                            </button>
-                                        </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="product-details-container mb-5 mt-md-5">
+                <p class="mb-0">{{ product.title }}</p>
+                <p class="mb-0">{{ product.author }}</p>
+                <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                {% if product.category %}
+                <p class="small mt-1 mb-0">
+                    <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                        <i class="fas fa-tag mr-1"></i>{{ product.category.name }}
+                    </a>
+                </p>
+                {% endif %}
+                {% if product.goodreads_url %}
+                <p>Futher info:
+                    <a href="{{ product.goodreads_url }}" target="_blank"><i class="fa-brands fa-goodreads-g"></i></a>
+                </p>
+                {% else %}
+                {% endif %}
+                <p class="mt-3">{{ product.description }}</p>
+                <!-- Form to add the product to the shopping bag -->
+                <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                    {% csrf_token %}
+                    <div class="form-row">
+                        <div class="col-12">
+                            <p class="mt-3"><strong>Quantity:</strong></p>
+                            <div class="form-group w-50">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <button class="decrement-qty btn btn-color rounded-0"
+                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                            <span class="icon">
+                                                <i class="fas fa-minus"></i>
+                                            </span>
+                                        </button>
+                                    </div>
+                                    <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                        min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    <div class="input-group-append">
+                                        <button class="increment-qty btn btn-color rounded-0"
+                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                            <span class="icon">
+                                                <i class="fas fa-plus"></i>
+                                            </span>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
-
-                            <div class="col-12">
-                                <a href="{% url 'products' %}" class="btn btn-outline-color rounded-0 mt-5">
-                                    <span class="icon">
-                                        <i class="fas fa-chevron-left"></i>
-                                    </span>
-                                    <span class="text-uppercase">Keep Shopping</span>
-                                </a>
-                                <input type="submit" class="btn btn-color rounded-0 text-uppercase mt-5" value="Add to Bag">
-                            </div>
-                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
-                    </form>
-                </div>
+
+                        <div class="col-12">
+                            <a href="{% url 'products' %}" class="btn btn-outline-color rounded-0 mt-5">
+                                <span class="icon">
+                                    <i class="fas fa-chevron-left"></i>
+                                </span>
+                                <span class="text-uppercase">Keep Shopping</span>
+                            </a>
+                            <input type="submit" class="btn btn-color rounded-0 text-uppercase mt-5" value="Add to Bag">
+                        </div>
+                        <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                    </div>
+                </form>
             </div>
         </div>
-        <!-- Reviews -->
+    </div>
+    <!-- Reviews -->
+    <div class="row">
+        <div class="col-12 col-sm-6 col-md-8 offset-lg-2 card-body">
+            {% if user.is_authenticated %}
+            <h3 class="text-color">Leave a Review: </h3>
+            <p>Posting as: {{ review.user}}</p>
+            <form method="post" style="margin-top: 1.3em;">
+                {% csrf_token %}
+                {{ review_form | crispy }}
+                <button type="submit" class="btn btn-color">Submit</button>
+                <hr>
+            </form>
+            {% else %}
+            <p class="fw-semibold">Please <a class="text-color" href="{% url 'account_signup' %}">Sign up</a> or
+                <a class="text-color" href="{% url 'account_login' %}">Login</a> to leave a review.
+            </p>
+            {% endif %}
+        </div>
+    </div>
+    <div class="row">
         {% if review %}
-        <div class="row">
-            {% for review in review %}
-            <div class="col-12 col-md-8 col-lg-4 offset-lg-2">
-                <div class="card mb-5 mt-md-5">
-                    <div class="card-body">
+        <div class="col-12 col-sm-6 col-md-8 offset-lg-2">
+            <div class="card mb-5 mt-md-5">
+                <div class="border-color">
+                    {% for review in review %}
+                    <div class="card-body border-bottom">
                         <h3 class="card-title brand-font-alt h6">{{ review.title }}</h3>
-                        <p><small class="text-muted p-0"><em>Posted by {{ review.user }} on {{ review.date }}</em></small></p>
+                        <p><small class="text-muted p-0"><em>
+                            Posted by {{ review.user }} on {{ review.date}}
+                        </em></small></p>
                         <p class="card-text">{{ review.content }}</p>
                     </div>
-                    <div class="card-footer">
-                        {% if user.is_authenticated %}
-                            <h3 class="text-color">Leave a Review: </h3>
-                            <p>Posting as: {{ review.user}}</p>
-                            <form method="post" style="margin-top: 1.3em;">
-                                {% csrf_token %}
-                                {{ form | crispy }}
-                                <button type="submit" class="btn btn-color">Submit</button>
-                                <hr>
-                            </form>
-                        {% else %}
-                            <p class="fw-semibold">Please <a class="text-color" href="{% url 'account_signup' %}">Sign up</a> or 
-                                <a class="text-color" href="{% url 'account_login' %}">Login</a> to leave a review.
-                            </p>
-                        {% endif %}
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
-            {% endfor %}
         </div>
         {% else %}
         <!-- Message displays if there are no available reviews -->
-        <div class="col">
-            <p>No reviews available for this book yet.</p>
-        </div>
+        <p>No reviews available for this book yet.</p>
         {% endif %}
+        {% endblock %}
     </div>
-{% endblock %}
+</div>
