--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,7 +1,6 @@
-
 {% extends "base.html" %}
-
 {% load static %}
+{% load bag_tools %}
 
 {% block page_header %}
     <div class="container header-container">
@@ -85,13 +84,13 @@
                                     {% include "bag/item_info.html" %}
                                 </td>
                                 <td class="py-3">
-                                    <p class="my-0">${{ item.product.price }}</p>
+                                    <p class="my-0">£{{ item.product.price }}</p>
                                 </td>
                                 <td class="py-3 w-25">
                                     {% include "bag/item_quantity.html" %}
                                 </td>
                                 <td class="py-3">
-                                    <p class="my-0"> </p>
+                                    <p class="my-0">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
                                 </td>
                             </tr>
                         {% endfor %}
@@ -137,8 +136,8 @@
     $('.remove-item').click(function(e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
-        var url = `/bag/remove/${itemId}`;
-        var data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
+        var url = `/bag/remove/${itemId}/`;
+        var data = {'csrfmiddlewaretoken': csrfToken, };
 
         $.post(url, data)
          .done(function() {
