--- a/bag/templates/bag/item_quantity.html
+++ b/bag/templates/bag/item_quantity.html
@@ -1,22 +1,22 @@
-<form class="form update-form" method="POST" action="">
+<form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
     {% csrf_token %}
     <div class="form-group">
-        <div class="input-group input-group-{{ item.item_id }}">
+        <div class="input-group">
             <div class="input-group-prepend">
-                <button class="decrement-qty btn btn-sm btn-color rounded-0 decrement-qty_{{ item.item_id }}
-                    data-item_id="{{ item.item_id }}" aria-label="decrement item number">
+                <button class="decrement-qty btn btn-sm btn-color rounded-0" 
+                    data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
                     <span>
                         <i class="fas fa-minus fa-sm"></i>
                     </span>
                 </button>
             </div>
-            <input class="form-control form-control-sm qty_input id_qty_{{ item.item_id }}
-                type="number" name="quantity" value="{{ item.quantity }}" min="1" max="99"
-                data-item_id="{{ item.item_id }}" aria-label="item quantity">
+            <input class="form-control form-control-sm qty_input" type="number"
+                    name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                    data-item_id="{{ item.item_id }}"
+                    id="id_qty_{{ item.item_id }}">
             <div class="input-group-append">
-                <button class="increment-qty btn btn-sm btn-color rounded-0 increment-qty_{{ item.item_id }}
-                    data-item_id="{{ item.item_id }}" aria-label="increment item number">
-                    <span>
+                <button class="increment-qty btn btn-sm btn-color rounded-0"
+                        data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
                         <i class="fas fa-plus fa-sm"></i>
                     </span>
                 </button>
@@ -24,9 +24,5 @@
         </div>
     </div>
 </form>
-<button type="button" class="text-info" aria-label="update item quantity button">
-    <small>Update</small>
-</button>
-<button type="button" class="text-danger float-right remove_{{ item.item_id }}" data-product_size="{{ item.size }}" aria-label="remove item button">
-    <small>Remove</small>
-</button>
+<a class="update-link text-info"><small>Update</small></a>
+<a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
