Fixed issue with review view and updated template

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -171,6 +171,13 @@ input[name='q']::placeholder {
     color: #aab7c4;
 }
 
+#review-container {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 30px;
+    padding: 30px;
+}
+
 /* ------------------------------- bootstrap toasts */
 
 .message-container {
