--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -96,7 +96,7 @@
             {% if user.is_authenticated %}
             <h3 class="text-color">Leave a Review: </h3>
             <p>Posting as: {{ review.user }}</p>
-            <form method="post" style="margin-top: 1.3em;">
+            <form method="post" action="{% url 'product_detail' product.id %}"style="margin-top: 1.3em;">
                 {% csrf_token %}
                 {{ review_form | crispy }}
                 <button type="submit" class="btn btn-color">Submit</button>
@@ -111,19 +111,20 @@
     </div>
     <div class="row">
         {% if review %}
-        <div class="col-12 col-sm-6 col-md-8 offset-lg-2">
-            <div class="card mb-5 mt-md-5">
-                <div class="border-color">
+        <div class="card col-12 col-sm-6 col-md-8 offset-lg-2">
+            <div class="card-body">
+                <h3>Reviews:</h3>
+                <hr>
                     {% for review in review %}
-                    <div class="card-body border-bottom">
+                    <div class="border-color" id="review-container">
                         <h3 class="card-title brand-font-alt h6">{{ review.title }}</h3>
+                        <hr>
                         <p><small class="text-muted p-0"><em>
                             Posted by {{ review.user }} on {{ review.date}}
                         </em></small></p>
                         <p class="card-text">{{ review.content }}</p>
                     </div>
                     {% endfor %}
-                </div>
             </div>
         </div>
         {% else %}
