Set up wishlist template, model, view and linked urls

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -35,11 +35,11 @@
                 </p>
                 <!-- View Wishlist link -->
                 <div class="col pl-0">
-                    <a href="" class="btn btn-outline-color rounded-0 text-uppercase mt-1">
+                    <a href="{% url 'wishlist' %}" class="btn btn-outline-color rounded-0 text-uppercase mt-1">
                         <span class="icon">
                             <i class="fa-solid fa-book-bookmark"></i>
                         </span>
-                    <span class="text-uppercase">Wish list</span>
+                    <span class="text-uppercase">Wishlist</span>
                     </a>
                 </div>
                 <hr>
