--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,7 @@
                                 <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                                 <!-- Custom Wish list and account links from Django allauth -->
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-                                <a href="" class="dropdown-item">Wish List <i class="fa-solid fa-book-bookmark"></i></a>
+                                <a href="{% url 'wishlist' %}" class="dropdown-item">Wishlist <i class="fa-solid fa-book-bookmark"></i></a>
                             {% else %}
                                 <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
                                 <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
