--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -2,50 +2,102 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <hr>
-                <h2 class="logo-font mb-4">Wishlist</h2>
-                <hr>
-            </div>
+<div class="overlay"></div>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <hr>
+            <h2 class="logo-font mb-4">Wishlist</h2>
+            <hr>
         </div>
-        <div class="row">
-            <div class="col-12">
-                <p class="font-weight-bold">Hello {{ user.username }},</p>
-            </div>
-            <div class="col-12">
-                <p>
-                    Please see your wishlist below:
-
-                </p>
-                <!-- Return to profile or shop books options -->
-                <div class="col pl-0">
-                    <a href="{% url 'profile' %}" class="btn btn-outline-color rounded-0 btn-lg">
-                        <span class="icon">
-                            <i class="fas fa-user fa-lg"></i>
-                        </span>
+    </div>
+    <div class="row">
+        <div class="col-12">
+            <p class="font-weight-bold">Hello {{ user.username }},</p>
+        </div>
+        <div class="col-12">
+            {% if wishlist %}
+            <p>
+                Please see your wishlist below:
+            </p>
+            {% else %}
+            <p class="mt-1">Your wishlist is empty.</p>
+            {% endif %}
+            <!-- Return to profile or shop books options -->
+            <div class="col pl-0">
+                <a href="{% url 'profile' %}" class="btn btn-outline-color rounded-0 btn-lg">
+                    <span class="icon">
+                        <i class="fas fa-user fa-lg"></i>
+                    </span>
                     <span class="text-uppercase">My Profile</span>
-                    </a>
-                    <a href="{% url 'products' %}" class="btn btn-color rounded-0 btn-lg">
-                        <span class="icon">
-                            <i class="fa-solid fa-book-open"></i>
-                        </span>
-                        <span class="text-uppercase">Shop books</span>
-                    </a>
-                </div>
-                <hr>
+                </a>
+                <a href="{% url 'products' %}" class="btn btn-color rounded-0 btn-lg">
+                    <span class="icon">
+                        <i class="fa-solid fa-book-open"></i>
+                    </span>
+                    <span class="text-uppercase">Shop books</span>
+                </a>
+            </div>
+            <hr>
+        </div>
+        <div class="container">
+            {% if wishlist %}
+            <div class="table-responsive rounded-0">
+                <table class="table table-lg text-align-center">
+                    <thead class="text-color">
+                        <tr>
+                            <th scope="col">Image</th>
+                            <th scope="col">Title</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">View</th>
+                            <th scope="col">Remove</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for product in wishlist %}
+                        <tr>
+                            <td>
+                                {% if product.product.image %}
+                                <img class="img-fluid rounded img-thumbnail" src="{{ product.product.image.url }}"
+                                    alt="{{ product.product.title }}">
+                                {% else %}
+                                <img class="img-fluid rounded img-thumbnail" src="{{ MEDIA_URL }}noimage.png"
+                                    alt="{{ product.product.title }}">
+                                {% endif %}
+                            </td>
+                            <td>
+                                <p class="h6">{{ product.product.title }}</p>
+                            </td>
+                            <td>
+                                <p class="h5">£{{ product.product.price }}</p>
+                            </td>
+                            <td>
+                                <a href="{% url 'product_detail' product.product.id %}"
+                                    aria-label="link to product detail">
+                                    <i class="fa-solid fa-book-open alt-text-muted"></i>
+                                </a>
+                            </td>
+                            <td>
+                                <a href="" aria-label="remove product from wishlist">
+                                    <i class="fas fa-trash alt-text-muted"></i>
+                                </a>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
             </div>
         </div>
+        {% endif %}
+    </div>
 
-        </div>
+</div>
 {% endblock %}
