--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -41,7 +41,7 @@
                 {% endif %}
                 {% if product.goodreads_url %}
                 <p>Futher info:
-                    <a href="{{ product.goodreads_url }}" target="_blank"><i class="fa-brands fa-goodreads-g"></i></a>
+                    <a rel="external" href="{{ product.goodreads_url }}" target="_blank"><i class="fa-brands fa-goodreads-g"></i></a>
                 </p>
                 {% else %}
                 {% endif %}
