Added delete functionality to product admin

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -31,6 +31,12 @@
                 <p class="mb-0">{{ product.title }}</p>
                 <p class="mb-0">{{ product.author }}</p>
                 <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+                {% if request.user.is_superuser %}
+                    <small class="ml-3">
+                        <a class="text-info" href="{% url 'edit_product' product.id %}">Edit</a> | 
+                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                    </small>
+                {% endif %}
                 <hr>
                 {% if product.category %}
                 <p class="small mt-1 mb-0">
