Created other app - set up contact us template, model, view and admin

--- a/templates/includes/main_nav.html
+++ b/templates/includes/main_nav.html
@@ -21,7 +21,7 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
                 <a href="" class="dropdown-item">Our Author of the Month</a>
-                <a href="" class="dropdown-item">Contact Us</a>
+                <a href="{% url 'contact_us' %}" class="dropdown-item">Contact Us</a>
             </div>
         </li>
     </ul>
