--- a/other/templates/other/featured_author.html
+++ b/other/templates/other/featured_author.html
@@ -22,31 +22,45 @@
 
     <div class="row">
         <div class="col-12 col-md-6">
-            <div class="col-12">
-                <p class="font-weight-bold">
-                    Each month we highlight an author we love! <br>
-                </p>
-            </div>
-            <div class="container" id="featured">
-                <div class="table-responsive rounded-0">
-                    {% for featured_author in featured_author %}
-                    {% if featured_author.is_featured %}
 
-                    <p class="h5">{{ featured_author.author }}</p>
-                    <img class="img-fluid rounded img-thumbnail" src="{{ featured_author.author_image.url }}"
-                                    alt="{{ featured_author.product.title }}">
+            <p class="font-weight-bold">
+                Each month we highlight an author we love! <br>
+            </p>
+
+        </div>
+    </div>
+
+    <div class="row">
+
+
+
+
+        <div class="container" id="featured">
+            <div>
+                {% for featured_author in featured_author %}
+                {% if featured_author.is_featured %}
+
+                <p class="h3 text-uppercase">{{ featured_author.author }}</p>
+
+                <div class="col-12 col-md-6 col-lg-4">
+                        <img class="img-fluid rounded img-thumbnail" src="{{ featured_author.author_image.url }}"
+                            alt="{{ featured_author.title }}">
+                </div>
+                <br>
+
+                <div class="col-12">
                     <p class="h6">{{ featured_author.about }}</p>
                     <p>View Author's site:
                         <a rel="external" href="{{ featured_author.website_url }}" target="_blank">Link</a>
                     </p>
 
                     </p>
-                    {% endif %}
-                    {% endfor %}
                 </div>
-            </div>
-            <div class="text-right">
-                <a class="btn btn-outline-color rounded-0" href="{% url 'products' %}">Shop</a>
+                {% endif %}
+                {% endfor %}
+                <div class="text-right">
+                    <a class="btn btn-color rounded-0" href="{% url 'products' %}">Shop</a>
+                </div>
             </div>
         </div>
     </div>
