--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="A childrens book shop ideal for bed time reading!">
-        <meta name="keywords" content="book, children, children's books, reading, bedside, tales, bedside tales">
+        <meta name="keywords" 
+            content="books, books for children, children's books, reading for bedtime, 
+                        bedside, bedside reading, tales, bedside tales, bedtime reading">
         <meta name="author" content="Developer, Amritpreet Sarohia">
     {% endblock %}
 
@@ -157,6 +159,9 @@
     {% block page_header %}
     {% endblock %}
 
+    <!-- Footer include -->
+    {% include 'includes/footer.html' %}
+    
     {% block content %}
     {% endblock %}
 
