--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,22 +1,62 @@
 {% load static %}
 
-  <footer class="footer bg-white">
+<footer class="footer bg-white">
     <hr>
     <div class="text-center">
         <div class="text-muted text-color">
             <p>Get exclusive offers and discount codes by subscribing to our monthly newsletter</p>
-           <!-- Mailchimp signup form here -->
+
+            <!-- Mailchimp signup form here -->
+            <div id="mc_embed_shell">
+                <div id="mc_embed_signup">
+                    <form
+                        action="https://gmail.us14.list-manage.com/subscribe/post?u=5f84bdf0414896473696d1d9d&amp;id=771f4a96d0&amp;f_id=00e977e3f0"
+                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                        target="_blank">
+                        <div id="mc_embed_signup_scroll">
+                            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                            <div class="mc-field-group"><label for="mce-EMAIL">Email Address <span
+                                        class="asterisk">*</span></label><input type="email" name="EMAIL"
+                                    class="required email" id="mce-EMAIL" required="" value=""><span
+                                    id="mce-EMAIL-HELPERTEXT" class="helper_text"></span></div>
+                            <div id="mce-responses" class="clear foot">
+                                <div class="response" id="mce-error-response" style="display: none;"></div>
+                                <div class="response" id="mce-success-response" style="display: none;"></div>
+                            </div>
+                            <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                                <!-- real people should not fill this in and expect good things - do not remove this or
+                                risk form bot signups -->
+                                <input type="text" name="b_5f84bdf0414896473696d1d9d_771f4a96d0" tabindex="-1" value="">
+                            </div>
+                            <div class="optionalParent">
+                                <div class="clear foot">
+                                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
+                                        value="Subscribe">
+                                    <p style="margin: 0px auto;"><a href="http://eepurl.com/iyFwss"
+                                            title="Mailchimp - email marketing made easy and fun"><span
+                                                style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
+                                                    class="refferal_badge"
+                                                    src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                                                    alt="Intuit Mailchimp"
+                                                    style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
         </div>
     </div>
     <div class="text-center">
         <p class="m-0 text-center text-color">
             <a class="text-color" href="https://www.facebook.com/profile.php?id=61550751631784" target="_blank"
-              rel="noopener" aria-label="Visit our Facebook page"><i
-                class="fa-brands fa-facebook pl-2"></i></a>
+                rel="noopener" aria-label="Visit our Facebook page"><i class="fa-brands fa-facebook pl-2"></i></a>
             <a class="text-color" href="https://www.instagram.com" target="_blank" rel="noopener"
-              aria-label="Visit our Instagram page "><i class="fa-brands fa-instagram pl-2"></i></a>
+                aria-label="Visit our Instagram page "><i class="fa-brands fa-instagram pl-2"></i></a>
             <a class="text-color" href="https://www.twitter.com" target="_blank" rel="noopener"
-              aria-label="Visit our Twitter page"><i class="fa-brands fa-twitter pl-2"></i></a>
-        </p>    
+                aria-label="Visit our Twitter page"><i class="fa-brands fa-twitter pl-2"></i></a>
+        </p>
     </div>
- </footer>
+</footer>
