Update footer template for mailchimp

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,10 +4,10 @@
     <hr>
     <div class="text-center">
         <div class="text-muted text-color">
-            <p>Get exclusive offers and discount codes by subscribing to our monthly newsletter</p>
+            <p class="mx-2">Get exclusive offers and discount codes by subscribing to our monthly newsletter</p>
 
             <!-- Mailchimp signup form here -->
-            <div id="mc_embed_shell">
+            <div class=col-12 id="mc_embed_shell">
                 <div id="mc_embed_signup">
                     <form
                         action="https://gmail.us14.list-manage.com/subscribe/post?u=5f84bdf0414896473696d1d9d&amp;id=771f4a96d0&amp;f_id=00e977e3f0"
