Amend mailchimp css and template for no review comment

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -2,7 +2,7 @@
 
 <footer class="footer bg-white">
     <hr>
-    <div class="col-12 text-center">
+    <div class="text-center">
         <div class="text-muted text-color">
             <p class="mx-2">Get exclusive offers and discount codes by subscribing to our monthly newsletter</p>
 
