--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -72,18 +72,18 @@
                             <div class="form-group w-50">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn btn-color rounded-0"
-                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                        <button class="decrement-qty btn btn-color rounded-0 decrement-qty_{{ product.id }}"
+                                            data-item_id="{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-minus"></i>
                                             </span>
                                         </button>
                                     </div>
-                                    <input class="form-control qty_input" type="number" name="quantity" value="1"
+                                    <input class="form-control qty_input id_qty_{{ product.id }}" type="number" name="quantity" value="1"
                                         min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                     <div class="input-group-append">
-                                        <button class="increment-qty btn btn-color rounded-0"
-                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                        <button class="increment-qty btn btn-color rounded-0 increment-qty_{{ product.id }}"
+                                            data-item_id="{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-plus"></i>
                                             </span>
@@ -146,7 +146,7 @@
             </div>
             {% else %}
             <!-- Message displays if there are no available reviews -->
-            <p>No reviews available for this book yet.</p>
+            <p class="mx-5">No reviews available for this book yet.</p>
             {% endif %}
         </div>
         {% endblock %}
