--- a/static/css/base.css
+++ b/static/css/base.css
@@ -344,20 +344,14 @@ footer {
 }
 
 /* mailchimp */
-#mc_embed_shell {
-    text-align: center;
-}
 
 #mc_embed_signup {
     background: #fff;
     text-align: left;
-    font: 14px Helvetica, Arial, sans-serif;
+    font: 14px;
     width: 275px;
 }
 
-#mc-embedded-subscribe-form {
-    display: inline-block;
-}
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
