--- a/profiles/static/profiles/css/profile.css
+++ b/profiles/static/profiles/css/profile.css
@@ -15,7 +15,7 @@
 #id_default_country option:not(:first-child) {
     color: #000;
     height: 40px;
-    padding: 6px 12px;
+    max-width: 275px;
 }
 
 #id_default_country option:first-child {
