--- a/static/css/base.css
+++ b/static/css/base.css
@@ -43,6 +43,10 @@ a:hover {
     color: #6C780E;
 }
 
+p {
+    margin-top: 1rem;
+}
+
 .hover:hover {
     color: #6C780E;
     background-color: white;
@@ -64,10 +68,11 @@ a:hover {
 /*box over hero image for tagline*/
 #text-cover {
     letter-spacing: 2px;
-    width: 350px;
-    height: 250px;
+    width: 260px;
+    height: 180px;
     background-color: rgba(108, 120, 14, .6);
     padding: 20px;
+    font-size: 40px;
   }
 
 .main-logo-link {
@@ -325,6 +330,37 @@ input[name='q']::placeholder {
     background-color: #dc3545;
     border-color: #dc3545;
     border-radius: 0;
+}
+
+/* Wishlist */
+
+@media (max-width: 574px) {
+
+    /* small screens */
+    .wishlist-thead {
+        display: none;
+    }
+
+    .wishlist-table,
+    .wishlist-tr {
+        display: flex;
+        flex-direction: column;
+        border: 5px solid #fff;
+    }
+
+    .wishlist-table,
+    .wishlist-td[data-label] {
+        display: flex;
+        font-weight: bold;
+        border-bottom: 1px solid #fff;
+    }
+
+    .wishlist-table .wishlist-td[data-label]::before {
+        content: attr(data-label);
+        font-weight: 200;
+        margin-right: 1rem;
+        width: 25%;
+    }
 }
 
 /* Featured author */
