--- a/templates/base.html
+++ b/templates/base.html
@@ -184,7 +184,7 @@
         $('.toast').toast('show');
     </script>
 
-    <!-- Mailchimp sscripts -->
+    <!-- Mailchimp scripts -->
     <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js">
     </script>
     <script type="text/javascript">
