--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -79,8 +79,8 @@
                                             </span>
                                         </button>
                                     </div>
-                                    <input class="form-control qty_input id_qty_{{ product.id }}" type="number" name="quantity" value="1"
-                                        min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    <input class="form-control qty_input id_qty_{{ product.id }}" type="number" name="quantity" 
+                                        value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                     <div class="input-group-append">
                                         <button class="increment-qty btn btn-color rounded-0 increment-qty_{{ product.id }}"
                                             data-item_id="{{ product.id }}">
