Add wishlist link to mobile template and update checkout success template

--- a/templates/includes/mobile_top_header.html
+++ b/templates/includes/mobile_top_header.html
@@ -39,7 +39,7 @@
             {% endif %}
             <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
             <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-            <a href="" class="dropdown-item">Wish List <i class="fa-solid fa-book-bookmark"></i></a>
+            <a href="{% url 'wishlist' %}" class="dropdown-item">Wish List <i class="fa-solid fa-book-bookmark"></i></a>
         {% else %}
             <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
             <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
