Add testing md and update issues in project found following testing

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -182,6 +182,10 @@ input[name='q']::placeholder {
     padding: 30px;
 }
 
+small {
+    font-size: .80em;
+}
+
 /* ------------------------------- bootstrap toasts */
 
 .message-container {
