--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -39,7 +39,7 @@
                             <p class="mb-0 font-weight-bold">Order Number</p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <small class="mb-0">{{ order.order_number }}</small>
+                            <p><small class="mb-0">{{ order.order_number }}</small></p>
                         </div>
                     </div>
 
