--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -72,8 +72,8 @@
                             <div class="form-group w-50">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn btn-color rounded-0 decrement-qty_{{ product.id }}"
-                                            data-item_id="{{ product.id }}">
+                                        <button class="decrement-qty btn btn-color rounded-0"
+                                            data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-minus"></i>
                                             </span>
@@ -82,8 +82,8 @@
                                     <input class="form-control qty_input id_qty_{{ product.id }}" type="number" name="quantity" 
                                         value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                     <div class="input-group-append">
-                                        <button class="increment-qty btn btn-color rounded-0 increment-qty_{{ product.id }}"
-                                            data-item_id="{{ product.id }}">
+                                        <button class="increment-qty btn btn-color rounded-0"
+                                            data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-plus"></i>
                                             </span>
@@ -121,8 +121,8 @@
                 <hr>
             </form>
             {% else %}
-            <p class="fw-semibold">Please <a class="text-color" href="{% url 'account_signup' %}">Sign up</a> or
-                <a class="text-color" href="{% url 'account_login' %}">Login</a> to leave a review.
+            <p class="fw-semibold">Please <a class="text-info" href="{% url 'account_signup' %}">Sign up</a> or
+                <a class="text-info" href="{% url 'account_login' %}">Login</a> to leave a review.
             </p>
             {% endif %}
         </div>
@@ -143,11 +143,11 @@
                     <p class="card-text">{{ review.content }}</p>
                 </div>
                 {% endfor %}
+                {% else %}
+                <!-- Message displays if there are no available reviews -->
+                <p class="mx-5">No reviews available for this book yet.</p>
+                {% endif %}
             </div>
-            {% else %}
-            <!-- Message displays if there are no available reviews -->
-            <p class="mx-5">No reviews available for this book yet.</p>
-            {% endif %}
         </div>
         {% endblock %}
     </div>
@@ -155,5 +155,5 @@
 
 {% block postloadjs %}
 {{ block.super }}
-{% include 'products/includes/quantity_input_script.html' %}
+{% include 'products/includes/quantity_input_script2.html' %}
 {% endblock %}
