Make changes following w3c testing and add images

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -61,7 +61,7 @@
                                 {% endif %}
                                 <div class="card-body pb-0">
                                     <p class="mb-0">{{ product.title }}</p>
-                                    <p class="mb-0 small text-muted"">Author: {{ product.author }}</p>
+                                    <p class="mb-0 small text-muted">Author: {{ product.author }}</p>
                                     <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
                                     {% if product.category %}
                                     <p class="small mt-1 mb-0">
