--- a/templates/includes/main_nav.html
+++ b/templates/includes/main_nav.html
@@ -15,8 +15,8 @@
                 <a href="{% url 'products' %}?category=Adventure" class="dropdown-item">Adventure</a>
                 <a href="{% url 'products' %}?category=Fantasy" class="dropdown-item ">Fantasy</a>
                 <a href="{% url 'products' %}?category=Fiction" class="dropdown-item ">Fiction</a>
-                <a href="{% url 'products' %}?category=Picture books" class="dropdown-item ">Picture books</a>
-                <a href="{% url 'products' %}?category=Adventure,Fantasy,Fiction,Picture books" class="dropdown-item">All books</a>
+                <a href="{% url 'products' %}?category=Picture-books" class="dropdown-item ">Picture-books</a>
+                <a href="{% url 'products' %}?category=Adventure,Fantasy,Fiction,Picture-books" class="dropdown-item">All books</a>
             </div>
         </li>
 
