Add links for w3c & add aria-labels to improve accessibility

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
                 <form method="GET" action="{% url 'products' %}" aria-label="search bar">
                     <div class="input-group w-100">
                         <input class="form-control border border-black rounded-0" type="text" name="q"
-                            placeholder="Search our site">
+                            aria-label="search" placeholder="Search our site">
                         <div class="input-group-append">
                             <button class="form-control btn btn-color border border-black rounded-0 hover" type="submit"
                                 aria-label="submit-search">
