--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -26,7 +26,8 @@
                             <div aria-hidden="true" style="position: absolute; left: -5000px;">
                                 <!-- real people should not fill this in and expect good things - do not remove this or
                                 risk form bot signups -->
-                                <input type="text" name="b_5f84bdf0414896473696d1d9d_771f4a96d0" tabindex="-1" value="">
+                                <input type="text" name="b_5f84bdf0414896473696d1d9d_771f4a96d0" tabindex="-1" value="" 
+                                    aria-label="enter-email-address">
                             </div>
                             <div class="optionalParent">
                                 <div class="clear foot">
