--- a/templates/includes/mobile_top_header.html
+++ b/templates/includes/mobile_top_header.html
@@ -11,9 +11,11 @@
     <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
         <form class="form" method="GET" action="{% url 'products' %}">
             <div class="input-group w-100">
-                <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
+                <input class="form-control border border-black rounded-0" type="text" name="q" 
+                    aria-label="search" placeholder="Search our site">
                 <div class="input-group-append">
-                    <button class="form-control form-control btn btn-color border border-black rounded-0" type="submit">
+                    <button class="form-control form-control btn btn-color border border-black rounded-0" type="submit"
+                        aria-label="submit-search">
                         <span class="icon">
                             <i class="fas fa-search"></i>
                         </span>
