Add user validation images and testing

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -111,7 +111,7 @@
                 {% else %}
                     <p class="lead mb-5">Your bag is empty.</p>
                     <!-- Keep shopping link -->
-                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                    <a href="{% url 'products' %}" class="btn btn-outline-color rounded-0 btn-lg">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
